Work around for crbug.com/719609

Temporarily disable check for Etc/GMT and take it as well as
Etc/UTC until the root cause of crbug.com/719609 is found.

BUG=chromium:719609,v8:6252
TBR=adamk@chromium.org

Review-Url: https://codereview.chromium.org/2872873002
Cr-Commit-Position: refs/heads/master@{#45186}